--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
 		"dev": "vite dev",
 		"build": "vite build",
 		"preview": "vite preview",
-		"prepare": "svelte-kit sync || echo ''"
+		"prepare": "svelte-kit sync || echo ''",
+		"deploy": "npm run build && gh-pages -d build"
+
 	},
 	"devDependencies": {
 		"@fontsource/fira-mono": "^5.2.7",
